Finish convertion to handlebars.js.

--- a/assets/templates/file_stats.handlebars
+++ b/assets/templates/file_stats.handlebars
@@ -1,3 +1,5 @@
+<!-- template: file_stats -->
+
 <div id="file-stats-section" class="section" style="float: right; width: 300px;">
   <h3 class="section-header">File Stats</h3>
   <dl>
