--- a/assets/templates/module.handlebars
+++ b/assets/templates/module.handlebars
@@ -1,4 +1,4 @@
-<!-- -->
+<!-- template: module -->
 
 <div id="documentation">
 
@@ -29,13 +29,13 @@
   <div id="namespace-list-section" class="section">
     <h3 class="section-header">Namespace</h3>
     <ul class="link-list">
-      {{#each modules}}
-        {{#doc}}<li class="{{[!]}}"><a href="#{{id}}">{{name}}</a></li>{{/doc}}
-      {{/each}}
+      {{#doc modules}}
+        <li class="{{[!]}}"><a href="#{{id}}">{{name}}</a></li>
+      {{/doc}}
 
-      {{#each classes}}
-        {{#doc}}<li class="{{[!]}}"><a href="#{{id}}">{{name}}</a></li>{{/doc}}
-      {{/each}}
+      {{#doc classes}}
+        <li class="{{[!]}}"><a href="#{{id}}">{{name}}</a></li>
+      {{/doc}}
     </ul>
   </div>
   {{/if_namespaces}}
@@ -45,9 +45,9 @@
   <div id="includes-section" class="section">
     <h3 class="section-header">Included Modules</h3>
     <ul class="link-list">
-    {{#each includes}}
-      {{#doc}}<li><a href="#{{id}}">{{name}}</a></li>{{/doc}}
-    {{/each}}
+    {{#doc includes}}
+      <li><a href="#{{id}}">{{name}}</a></li>
+    {{/doc}}
     </ul>
   </div>
   {{/if}}
@@ -57,9 +57,9 @@
   <div id="extensions-section" class="section">
     <h3 class="section-header">Extension Modules</h3>
     <ul class="link-list">
-    {{#each extensions}}
-      {{#doc}}<li><a href="#{{id}}">{{name}}</a></li>{{/doc}}
-    {{/each}}
+    {{#doc extensions}}
+      <li><a href="#{{id}}">{{name}}</a></li>
+    {{/doc}}
     </ul>
   </div>
   {{/if}}
@@ -69,12 +69,10 @@
   <div id="constants-list" class="section">
     <h3 class="section-header">Constants</h3>
     <dl>
-    {{#each constants}}
-      {{#doc}}
+    {{#doc constants}}
       <dt><a name="{{id}}" href="#{{id}}">{{name}}</a></dt>
       <dd class="description">{{comment}}</dd>
-      {{/doc}}
-    {{/each}}
+    {{/doc}}
     </dl>
   </div>
   {{/if}}
@@ -85,99 +83,98 @@
     <h3 class="section-header">Attributes</h3>
 
     {{#each accessors}}
-      ${docr = Rebecca.documentation_by_key[x],''}
-      ${docw = Rebecca.documentation_by_key[x+'='],''}
-      <div id="${docr.id}" class="method-detail">
-        <a name="${docr.id}"></a>
-        {{if docw}}
-          <a name="${docw.id}"></a>
-        {{/if}}
-        <div class="method-heading">
-          <span class="method-name">${docr.name}</span>
-          <span class="attribute-access-type">
-            [<a href="${Rebecca.method_href(docr)}">R</a>{{if docw}}<a href="${Rebecca.method_href(docw)}">W</a>{{/if}}]
-          </span>
+      {{#reader}}
+        <div id="{{id}}" class="method-detail">
+          <a name="{{id}}"></a>
+          <div class="method-heading">
+            <a href="{{calc_method_href}}" class="method-name">{{name}}</a>
+          </div>
+          <div class="method-description">
+            <p>{{comment}}</p>
+          </div>
         </div>
+      {{/reader}}
 
-        <div class="method-description">
-          {{if docr}}<p>${docr.comment}</p>{{/if}}
-          {{if docw}}{{if docw.comment != docr.comment}}
-            <p>${docw.comment}</p>
-          {{/if}}{{/if}}
+      {{#writer}}
+        <div id="{{id}}" class="method-detail">
+          <a name="{{id}}"></a>
+          <div class="method-heading">
+            <a href="{{calc_method_href}}" class="method-name">{{name}}</a>
+          </div>
+          <div class="method-description">
+            <p>{{comment}}</p>
+          </div>
         </div>
-      </div>
+      {{/writer}}
     {{/each}}
   </div>
   {{/if}}
 
   <!-- Methods -->
-  {{#if methods.length}}
-  ${divy = Rebecca.divy_methods(methods), ''}
-
+  {{#methods_categorized}}
   <div id="methods" class="method-section section">
-    {{if divy['class']['public'].length}}
+    {{#if_methods_by "class" "public"}}
     <div id="public-class-method-details" class="class-method-list">
       <h3 class="section-header">Public Class Methods</h3>
-      {{each(i,m) divy['class']['public']}}
-        {{tmpl(m) "#template-method"}}
-      {{/each}}
+      {{#methods_by "class" "public"}}
+        {{> method}}
+      {{/methods_by}}
     </div>
-    {{/if}}
+    {{/if_methods_by}}
 
-    {{if divy['class']['private'].length}}
+    {{#if_methods_by "class" "private"}}
     <div id="private-class-method-details" class="class-method-list">
       <h3 class="section-header">Private Class Methods</h3>
-      {{each(i,m) divy['class']['private']}}
-        {{tmpl(m) "#template-method"}}
-      {{/each}}
+      {{#methods_by "class" "private"}}
+        {{> method}}
+      {{/methods_by}}
     </div>
-    {{/if}}
+    {{/if_methods_by}}
 
-    {{if divy['class']['protected'].length}}
+    {{#if_methods_by "class" "protected"}}
     <div id="protected-class-method-details" class="class-method-list">
       <h3 class="section-header">Protected Class Methods</h3>
-      {{each(i,m) divy['class']['protected']}}
-        {{tmpl(m) "#template-method"}}
-      {{/each}}
+      {{#methods_by "class" "protected"}}
+        {{> method}}
+      {{/methods_by}}
     </div>
-    {{/if}}
+    {{/if_methods_by}}
 
-    {{if divy['instance']['public'].length}}
+    {{#if_methods_by "instance" "public"}}
     <div id="public-instance-method-details" class="instance-method-list">
       <h3 class="section-header">Public Instance Methods</h3>
-      {{each(i,m) divy['instance']['public']}}
-        {{tmpl(m) "#template-method"}}
-      {{/each}}
+      {{#methods_by "instance" "public"}}
+        {{> method}}
+      {{/methods_by}}
     </div>
-    {{/if}}
+    {{/if_methods_by}}
 
-    {{if divy['instance']['private'].length}}
+    {{#if_methods_by "instance" "private"}}
     <div id="private-instance-method-details" class="instance-method-list">
       <h3 class="section-header">Private Instance Methods</h3>
-      {{each(i,m) divy['instance']['private']}}
-        {{tmpl(m) "#template-method"}}
-      {{/each}}
+      {{#methods_by "instance" "private"}}
+        {{> method}}
+      {{/methods_by}}
     </div>
-    {{/if}}
+    {{/if_methods_by}}
 
-    {{if divy['instance']['protected'].length}}
+    {{#if_methods_by "instance" "protected"}}
     <div id="protected-instance-method-details" class="instance-method-list">
       <h3 class="section-header">Protected Instance Methods</h3>
-      {{each(i,m) divy['instance']['protected']}}
-        {{tmpl(m) "#template-method"}}
-      {{/each}}
+      {{#methods_by "instance" "protected"}}
+        {{> method}}
+      {{/methods_by}}
     </div>
-    {{/if}}
+    {{/if_methods_by}}
   </div>
-  {{/if}}
+  {{/methods_categorized}}
 
   <!-- In Files -->
   <div id="file-list-section" class="section">
     <h3 class="section-header">In Files</h3>
     <div class="section-body">
       <ul>
-      {{#each files}}
-        {{#doc}
+      {{#doc files}}
         <li class="file">
           {{#if uri}}
             <a href="{{uri}}" title="{{name}}">
@@ -189,8 +186,7 @@
             </a>
           {{/if}}
         </li>
-        {{/doc}}
-      {{/each}}
+      {{/doc}}
       </ul>
     </div>
   </div>
