--- a/assets/templates/index.handlebars
+++ b/assets/templates/index.handlebars
@@ -1,3 +1,5 @@
+<!-- template: index -->
+
 <!-- @scope Rebecca.documentation -->
 
 <div id="alphabetical-index">
@@ -34,7 +36,7 @@
     <div class="multi-column listing">
     {{#methods}}
       <div class="item {{#if singleton}}singleton{{else}}method{{/if}}">
-        <a href="{{calc_href_method}}" title="{{namespace}}">{{name}}</a>
+        <a href="{{calc_method_href}}" title="{{namespace}}">{{name}}</a>
       </div>
     {{/methods}}
     </div>
