--- a/assets/templates/title.handlebars
+++ b/assets/templates/title.handlebars
@@ -1,3 +1,5 @@
+<!-- template: title -->
+
 <h2><a href="index.html">{{title}}</a></h2>
 <h1>
   <img src="assets/images/icons/project.png" align="absmiddle">&nbsp;
