--- a/source/templates/method.handlebars
+++ b/source/templates/method.handlebars
@@ -3,7 +3,7 @@
 <div id="{{id}}" class="method-detail {{#if is_alias_for}}method-alias{{/if}}">
   <a name="{{id}}"></a>
 
-  <div class="method-heading" style="position: relative;">
+  <div class="method-heading" style="position: relative;" onclick="Rebecca.showSource(this);">
     <!-- <span class="method-name">{{name}}</span> -->
     {{#interfaces}}
       <span class="method-callseq">{{signature}}</span>
@@ -19,9 +19,7 @@
     {{/if}}
 
     <div class="method-source-code" id="{{id}}-source">
-      <pre>
-        {{source}}
-      </pre>
+      <pre>{{source}}</pre>
     </div>
   </div>
 
